# wealth

./: .cspell.json  .env  .env.demo  .env.development  .env.production  .env.staging  .gitignore  .gitleaks.toml  .mega-linter.yml  .pre-commit-config.yaml  README.md  Taskfile.yml  docker-compose.base.yml  docker-compose.demo.yml  docker-compose.development.yml  docker-compose.production.yml  docker-compose.staging.yml  flake.nix  package.json  pnpm-workspace.yaml  wealth.code-workspace
.changeset/: config.json
.devcontainer/: Dockerfile  devcontainer-log.json  devcontainer.json  devcontainer.sh  docker-compose.yml  post_create.py  update-content.sh
.devcontainer/features/devtools/: README.md  devcontainer-feature.json  install.sh
.devcontainer/features/docker-proxy/: README.md  devcontainer-feature.json
.devcontainer/features/mega-linter/: README.md  devcontainer-feature.json  install.sh
.devcontainer/nix/: nix.conf
.github/workflows/: docs.yml  gitleaks.yml  lint.yml  release.yml
.husky/_/: husky.sh
apps/ui/: .gitignore  Dockerfile  README.md  Taskfile.yml  eslint.config.cjs  index.html  package.json  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
apps/ui/.husky/: husky.sh
apps/ui/.storybook/: main.ts
apps/ui/src/: App.tsx  config.ts  env.d.ts  googleAuth.ts  keycloak.ts  main.tsx  oidc.ts
config/: .asdfrc
docs/: README.md  docusaurus.config.js  package.json  sidebars.js
docs/docs/: intro.md
services/api/: Dockerfile  __main__.py  alembic.ini  auth.py  config.py  constants.py  dao.py  database.py  main.py  middleware.py  migrations.py
wealth/: .coverage  README.md  main.py  pyproject.toml
wealth/data/: allocations.py
wealth/src/models/: allocation.py  debt.py  expense.py  income.py  wealth.py
wealth/tests/: conftest.py  test_finance.py  test_schema.py  test_sqlmodels.py
wealth/wealth/: __init__.py  cli.py
wealth/wealth/core/: __init__.py  engine.py  finance.py  strategies.py  utils.py
wealth/wealth/data/: allocations.py
wealth/wealth/db/: __init__.py
wealth/wealth/mock/: __init__.py  mock_allocation.py  mock_debt.py  mock_expense.py  mock_finance.py  mock_income.py  mock_investment.py  mock_portfolio.py  mock_services.py
wealth/wealth/models/: __init__.py  allocation.py  asset.py  debt.py  expense.py  frequency.py  income.py  investment.py  lifecycle.py  portfolio.py  risk.py  services.py  wealth.py
wealth/wealth/schemas/: __init__.py  wealth.schema.json
(+33 files in other folders)
