[build-system]
requires = ["poetry-core>=2.1.2"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "wealth"
version = "0.1.0"
description = ""
authors = ["Alan Szmyt <szmyty@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "wealth" }]

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.11.5"
pandas = "^2.2.3"
faker = "^37.3.0"
click = "^8.2.1"
plotly = "^6.1.1"
kaleido = "0.2.1"

[tool.poetry.scripts]
wealth = "wealth.cli:cli"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.1.1"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=wealth --cov-report=term-missing -ra -q"
testpaths = ["tests"]
python_files = ["test_*.py"]

