[build-system]
requires = ["poetry-core>=2.1.2"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "wealth"
version = "0.1.0"
description = ""
authors = ["Alan Szmyt <szmyty@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "wealth" }]

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.11.5"
pandas = "^2.2.3"
faker = "^37.3.0"
click = "^8.2.1"
fastapi = "^0.111.0"
uvicorn = "^0.30.0"
fastapi-keycloak = "^0.7.0"
authlib = "^1.3.0"

[tool.poetry.scripts]
wealth = "wealth.cli:cli"
