[build-system]
requires = ["poetry-core>=2.1.2"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "wealth"
version = "0.1.0"
description = ""
authors = ["Alan Szmyt <szmyty@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "wealth" }]
include = [{ path = "wealth/schemas/wealth.schema.json" }]

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.11.5"
pandas = "^2.2.3"
faker = "^37.3.0"
click = "^8.2.1"
plotly = "^6.1.1"
kaleido = "0.2.1"
fastapi = "^0.111.0"
uvicorn = "^0.30.0"
fastapi-keycloak = "^0.7.0"
authlib = "^1.3.0"
asyncpg = "^0.29.0"
SQLAlchemy = "^2.0"
alembic = "^1.13.1"
structlog = "^24.1.0"
python-json-logger = "^2.0.7"
loguru = "^0.7.2"
sqlmodel = "^0.0.14"
jsonschema = "^4.21.1"

[tool.poetry.scripts]
wealth = "wealth.cli:cli"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.1.1"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=wealth --cov-report=term-missing -ra -q"
testpaths = ["tests"]
python_files = ["test_*.py"]

